projects/ecom-python/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-python-api
  namespace: ecom-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecom-python-api
  template:
    metadata:
      labels:
        app: ecom-python-api
    spec:
      containers:
        - name: ecom-python-api
          image: ecom-python-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
