projects/ecom-python/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-python-api
  namespace: ecom-python
spec:
  selector:
    app: ecom-python-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
