projects/ecom-python/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-python-ing
  namespace: ecom-python
  labels:
    app: ecom-python
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "4m"
    nginx.org/use-regex: "true"
    nginx.org/backend-protocol: "http"
spec:
  ingressClassName: nginx
  rules:
  - host: ecom-python.greencap
    http:
      paths:
      - backend:
          service:
            name: ecom-python-api
            port:
              number: 8000
        path: /
        pathType: Prefix
